--- a/ShootingProject/Config/DefaultEngine.ini
+++ b/ShootingProject/Config/DefaultEngine.ini
@@ -1,10 +1,11 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/StarterContent/Maps/Minimal_Default
+GameDefaultMap=/Game/Maps/MainMap.MainMap
 
 
-EditorStartupMap=/Game/StarterContent/Maps/Minimal_Default
+EditorStartupMap=/Game/Maps/MainMap.MainMap
+GlobalDefaultGameMode=/Game/Blueprints/BP_GameModeBase.BP_GameModeBase_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
