--- a/ShootingProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ShootingProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -22,6 +22,7 @@ PreviewPlatformName=None
 PreviewShaderFormatName=None
 bPreviewFeatureLevelActive=False
 PreviewDeviceProfileName=None
+bAllowSelectTranslucent=False
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
 LaptopScreenResolutions=(Description="Apple MacBook Air 11",Width=1366,Height=768,AspectRatio="16:9",bCanSwapAspectRatio=True,ProfileName="")
@@ -94,14 +95,14 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1360,Y=992)
+LastSize=(X=0,Y=0)
 LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-MDBI1CK
 LastExecutedLaunchName=DESKTOP-MDBI1CK
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-NewWindowWidth=1360
-NewWindowHeight=992
+NewWindowWidth=1430
+NewWindowHeight=1230
 MultipleInstancePositions=(X=1280,Y=684)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
@@ -132,14 +133,12 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 LastLevel=/Game/Maps/MainMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/BP_Bullet.BP_Bullet
-OpenAssetsAtExit=/Game/Blueprints/BP_Player.BP_Player
-OpenAssetsAtExit=/Game/Blueprints/BP_Enemy.BP_Enemy
+CleanShutdown=False
+OpenAssetsAtExit=/Game/Resources/M_Background.M_Background
 
 [RootWindow]
-ScreenPosition=X=960.000 Y=214.667
-WindowSize=X=1606.000 Y=1033.333
+ScreenPosition=X=423.333 Y=85.333
+WindowSize=X=1609.333 Y=1036.000
 InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
@@ -167,7 +166,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Resources
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -594,24 +593,196 @@ BP_Enemy_C.Rendering=True
 BP_Enemy_C.Collision=True
 BP_Enemy_C.Actor=True
 BP_Enemy_C.Input=True
+NewBlueprint_C.Tick=True
+NewBlueprint_C.Replication=True
+NewBlueprint_C.Rendering=True
+NewBlueprint_C.Collision=True
+NewBlueprint_C.Actor=True
+NewBlueprint_C.Input=True
+EdGraph.Graph=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+BoxComponent.Variable=True
+BoxComponent.TransformCommon=True
+BoxComponent.Sockets=True
+BoxComponent.Shape=True
+BoxComponent.Navigation=True
+BoxComponent.ComponentTick=True
+BoxComponent.Rendering=True
+BoxComponent.Physics=True
+BoxComponent.Collision=True
+BoxComponent.Tags=True
+BoxComponent.ComponentReplication=True
+BoxComponent.Cooking=True
+BoxComponent.Events=True
+PrimitiveComponent.TransformCommon=True
+PrimitiveComponent.Materials=True
+PrimitiveComponent.ComponentTick=True
+PrimitiveComponent.Rendering=True
+PrimitiveComponent.Navigation=True
+PrimitiveComponent.Tags=True
+PrimitiveComponent.ComponentReplication=True
+PrimitiveComponent.Variable=True
+PrimitiveComponent.Cooking=True
+K2Node_CustomEvent.GraphNodeDetail=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
+BP_KillZone_C.Tick=True
+BP_KillZone_C.Replication=True
+BP_KillZone_C.Rendering=True
+BP_KillZone_C.Collision=True
+BP_KillZone_C.Actor=True
+BP_KillZone_C.Input=True
+BP_KillZone_C.TransformCommon=True
+StaticMesh.StaticMeshMaterials=True
+StaticMesh.LODCustomMode=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.Collision=True
+StaticMesh.ImportSettings=True
+StaticMesh.RayTracing=True
+StaticMesh.Navigation=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.PhysicalMaterialMask=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.Tessellation=True
+PreviewMaterial.Group Sorting=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.ImportSettings=True
+MaterialExpressionTextureSample.MaterialExpressionTextureSample=True
+MaterialExpressionTextureSample.MaterialExpressionTextureBase=True
+MaterialExpressionTextureSample.MaterialExpression=True
+StaticMeshActor.TransformCommon=True
+StaticMeshActor.StaticMesh=True
+StaticMeshActor.Materials=True
+StaticMeshActor.Physics=True
+StaticMeshActor.Collision=True
+StaticMeshActor.Lighting=True
+StaticMeshActor.Rendering=True
+StaticMeshActor.Navigation=True
+StaticMeshActor.VirtualTexture=True
+StaticMeshActor.Tags=True
+StaticMeshActor.Cooking=True
+StaticMeshActor.Replication=True
+StaticMeshActor.Actor=True
+MaterialExpressionMultiply.MaterialExpressionMultiply=True
+MaterialExpressionMultiply.MaterialExpression=True
+MaterialExpressionComment.MaterialExpressionComment=True
+MaterialExpressionComment.MaterialExpression=True
+MaterialExpressionScalarParameter.General=True
+MaterialExpressionScalarParameter.MaterialExpressionScalarParameter=True
+MaterialExpressionScalarParameter.MaterialExpression=True
+MaterialExpressionScalarParameter.CustomPrimitiveData=True
+MaterialExpression.MaterialExpression=True
+MaterialExpressionPanner.MaterialExpressionPanner=True
+MaterialExpressionPanner.MaterialExpression=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/BP_Enemy
-MRUItem1=/Game/Blueprints/BP_Player
-MRUItem2=/Game/Blueprints/BP_Bullet
-MRUItem3=/Game/Blueprints/BP_EnemyFactory
-MRUItem4=/Game/Audio/star-wars-blaster
-MRUItem5=/Game/Blueprints/BP_Enomy
-MRUItem6=/Game/Blueprints/BP_GameModeBase
-MRUItem7=/Game/Maps/MainMap
+MRUItem0=/Game/Resources/M_Background
+MRUItem1=/Engine/BasicShapes/Cube
+MRUItem2=/Game/Blueprints/BP_KillZone
+MRUItem3=/Game/Blueprints/BP_Player
+MRUItem4=/Game/Blueprints/BP_Enemy
+MRUItem5=/Game/Blueprints/NewBlueprint
+MRUItem6=/Game/Blueprints/BP_Bullet
+MRUItem7=/Game/Blueprints/BP_EnemyFactory
+MRUItem8=/Game/Audio/star-wars-blaster
+MRUItem9=/Game/Blueprints/BP_Enomy
+MRUItem10=/Game/Blueprints/BP_GameModeBase
+MRUItem11=/Game/Maps/MainMap
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
 GeneralProjectSettings=True
 GameMapsSettings=True
 InputSettings=True
+CollisionProfile=True
+GameplayTagsSettings=True
+MoviePlayerSettings=True
+ProjectPackagingSettings=True
+HardwareTargetingSettings=True
+AssetManagerSettings=True
+AssetToolsSettings=True
+AISystem=True
+AnimationSettings=True
+AudioSettings=True
+ChaosSolverSettings=True
+ConsoleSettings=True
+CookerSettings=True
+CrowdManager=True
+DataDrivenConsoleVariableSettings=True
+DebugCameraControllerSettings=True
+GameplayDebuggerConfig=True
+GarbageCollectionSettings=True
+Engine=True
+HierarchicalLODSettings=True
+LandscapeSettings=True
+LevelSequenceProjectSettings=True
+RecastNavMesh=True
+NavigationSystemV1=True
+NetworkSettings=True
+PhysicsSettings=True
+RendererSettings=True
+RendererOverrideSettings=True
+SlateSettings=True
+StreamingSettings=True
+TutorialSettings=True
+UserInterfaceSettings=True
+LevelEditor2DSettings=True
+EditorProjectAppearanceSettings=True
+BlueprintEditorProjectSettings=True
+ClassViewerProjectSettings=True
+DDCProjectSettings=True
+ProxyLODMeshSimplificationSettings=True
+MovieSceneToolsProjectSettings=True
+MeshSimplificationSettings=True
+PaperImporterSettings=True
+SkeletalMeshSimplificationSettings=True
+StructViewerProjectSettings=True
+TextureImportSettings=True
+UMGEditorProjectSettings=True
+AndroidRuntimeSettings=True
+ShaderPlatformQualitySettings=True
+AndroidSDKSettings=True
+IOSRuntimeSettings=True
+LinuxTargetSettings=True
+MacTargetSettings=True
+LuminRuntimeSettings=True
+MagicLeapSDKSettings=True
+WindowsTargetSettings=True
+AvfMediaSettings=True
+GooglePADRuntimeSettings=True
+ImgMediaSettings=True
+LevelSequenceEditorSettings=True
+LiveLinkSettings=True
+LiveLinkComponentSettings=True
+LiveLinkSequencerSettings=True
+MagicLeapSettings=True
+MagicLeapARPinSettings=True
+NiagaraSettings=True
+NiagaraEditorSettings=True
+OculusHMDRuntimeSettings=True
+PaperRuntimeSettings=True
+PythonScriptPluginSettings=True
+SteamVREditorSettings=True
+TakeRecorderProjectSettings=True
+TcpMessagingSettings=True
+UdpMessagingSettings=True
+WmfMediaSettings=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/Resources/M_Background.M_Background;
+RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/Blueprints/BP_KillZone.BP_KillZone;
 RecentlyPlaced=/Game/Blueprints/BP_EnemyFactory.BP_EnemyFactory;
 RecentlyPlaced=/Game/Blueprints/BP_Bullet.BP_Bullet;
 RecentlyPlaced=/Game/Blueprints/BP_Player.BP_Player;
@@ -1516,6 +1687,8 @@ Voice.TimeStamp=2023.08.17-00.20.14
 Voice.LastCompileMethod=Unknown
 MovieSceneCapture.TimeStamp=2023.08.17-00.20.09
 MovieSceneCapture.LastCompileMethod=Unknown
+StaticMeshEditor.TimeStamp=2023.08.17-00.20.13
+StaticMeshEditor.LastCompileMethod=Unknown
 
 [DetailCustomWidgetExpansion]
 CryptoKeysSettings=InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Horizontal,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Horizontal,InputSettings.Bindings.AxisMappings.Vertical,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
@@ -1596,10 +1769,21 @@ TcpMessagingSettings=InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bi
 TemplateSequenceEditorSettings=InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Horizontal,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Horizontal,InputSettings.Bindings.AxisMappings.Vertical,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Horizontal,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Horizontal,InputSettings.Bindings.AxisMappings.Vertical,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Horizontal,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Horizontal,InputSettings.Bindings.AxisMappings.Vertical,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+BoxComponent=
+BP_KillZone_C=BoxComponent.Collision.Collision,
+SceneComponent=
+BP_EnemyFactory_C=BoxComponent.Collision.Collision,
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[0]\" \"Object.Bindings.AxisMappings.AxisMappings[3]\" "
 Object=
+BoxComponent=
+ShapeComponent=
+PrimitiveComponent=
+SceneComponent=
+ActorComponent=
+StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1644,5 +1828,76 @@ CoordSystem=1
 /Game/Audio/star-wars-blaster.star-wars-blaster=0
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=MapCheck
+
+[/Script/UnrealEd.MaterialEditorOptions]
+bShowGrid=False
+bHideUnrelatedNodes=False
+bUseUnsortedMenus=False
+
+[DetailCategoriesAdvanced]
+BoxComponent.Collision=True
+
+[MaterialEditor]
+PrimType=1
+
+[/Script/UnrealEd.MaterialStatsOptions]
+bPlatformUsed[0]=1
+bPlatformUsed[1]=0
+bPlatformUsed[2]=0
+bPlatformUsed[3]=0
+bPlatformUsed[4]=0
+bPlatformUsed[5]=0
+bPlatformUsed[6]=0
+bPlatformUsed[7]=0
+bPlatformUsed[8]=0
+bPlatformUsed[9]=0
+bPlatformUsed[10]=0
+bPlatformUsed[11]=0
+bPlatformUsed[12]=0
+bPlatformUsed[13]=0
+bPlatformUsed[14]=0
+bPlatformUsed[15]=0
+bPlatformUsed[16]=0
+bPlatformUsed[17]=0
+bPlatformUsed[18]=0
+bPlatformUsed[19]=0
+bPlatformUsed[20]=0
+bPlatformUsed[21]=0
+bPlatformUsed[22]=0
+bPlatformUsed[23]=0
+bPlatformUsed[24]=0
+bPlatformUsed[25]=0
+bPlatformUsed[26]=0
+bPlatformUsed[27]=0
+bPlatformUsed[28]=0
+bPlatformUsed[29]=0
+bPlatformUsed[30]=0
+bPlatformUsed[31]=0
+bPlatformUsed[32]=0
+bPlatformUsed[33]=0
+bPlatformUsed[34]=0
+bPlatformUsed[35]=0
+bPlatformUsed[36]=0
+bPlatformUsed[37]=0
+bPlatformUsed[38]=0
+bPlatformUsed[39]=0
+bPlatformUsed[40]=0
+bPlatformUsed[41]=0
+bPlatformUsed[42]=0
+bPlatformUsed[43]=0
+bPlatformUsed[44]=0
+bPlatformUsed[45]=0
+bPlatformUsed[46]=0
+bPlatformUsed[47]=0
+bPlatformUsed[48]=0
+bMaterialQualityUsed[0]=0
+bMaterialQualityUsed[1]=1
+bMaterialQualityUsed[2]=0
+bMaterialQualityUsed[3]=0
+
+[LightingBuildOptions]
+OnlyBuildSelected=False
+OnlyBuildSelectedLevels=False
+OnlyBuildVisibility=False
 
