--- a/ShootingProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ShootingProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -95,14 +95,14 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=0,Y=0)
+LastSize=(X=1445,Y=1281)
 LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-MDBI1CK
 LastExecutedLaunchName=DESKTOP-MDBI1CK
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-NewWindowWidth=1430
-NewWindowHeight=1230
+NewWindowWidth=1445
+NewWindowHeight=1281
 MultipleInstancePositions=(X=1280,Y=684)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
@@ -133,12 +133,15 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 LastLevel=/Game/Maps/MainMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/Resources/M_Background.M_Background
+CleanShutdown=True
+OpenAssetsAtExit=/Game/Blueprints/BP_Enemy.BP_Enemy
+OpenAssetsAtExit=/Game/Blueprints/BP_GameModeBase.BP_GameModeBase
+OpenAssetsAtExit=/Game/Blueprints/BP_Bullet.BP_Bullet
+OpenAssetsAtExit=/Game/UI/BP_MainWidget.BP_MainWidget
 
 [RootWindow]
-ScreenPosition=X=423.333 Y=85.333
-WindowSize=X=1609.333 Y=1036.000
+ScreenPosition=X=914.000 Y=694.667
+WindowSize=X=1615.333 Y=678.000
 InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
@@ -166,7 +169,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Resources
+ContentBrowserTab1.SelectedPaths=/Game/UI
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -186,6 +189,26 @@ GlobalAssetPicker.ActiveFrontendFilters=
 GlobalAssetPicker.EnabledFrontendFilters=
 GlobalAssetPicker.ThumbnailSizeScale=0.100000
 GlobalAssetPicker.CurrentViewType=0
+ContentBrowserTab2.SourcesExpanded=True
+ContentBrowserTab2.Locked=False
+ContentBrowserTab2.VerticalSplitter.SlotSize0=0.250000
+ContentBrowserTab2.VerticalSplitter.SlotSize1=0.750000
+ContentBrowserTab2.FavoriteSplitter.SlotSize0=0.200000
+ContentBrowserTab2.FavoriteSplitter.SlotSize1=0.800000
+ContentBrowserTab2.FavoriteSplitter.SlotSize2=0.400000
+ContentBrowserTab2.ActiveTypeFilters=
+ContentBrowserTab2.EnabledTypeFilters=
+ContentBrowserTab2.ActiveFrontendFilters=
+ContentBrowserTab2.EnabledFrontendFilters=
+ContentBrowserTab2.SelectedPaths=/Game/Modelings/EnemyModel
+ContentBrowserTab2.PluginFilters=
+ContentBrowserTab2.Favorites.SelectedPaths=
+ContentBrowserTab2.CollectionsExpanded=True
+ContentBrowserTab2.SelectedCollections=
+ContentBrowserTab2.ExpandedCollections=
+ContentBrowserTab2.ViewMode=0
+ContentBrowserTab2.ThumbnailSizeScale=0.180000
+ContentBrowserTab2.CurrentViewType=1
 
 [MRU]
 MRUItem0=/Game/Maps/MainMap
@@ -685,20 +708,71 @@ MaterialExpressionScalarParameter.CustomPrimitiveData=True
 MaterialExpression.MaterialExpression=True
 MaterialExpressionPanner.MaterialExpressionPanner=True
 MaterialExpressionPanner.MaterialExpression=True
+FbxImportUI.Mesh=True
+FbxImportUI.Transform=True
+FbxImportUI.Miscellaneous=True
+FbxImportUI.Material=True
+FbxImportUI.FbxFileInformation=True
+MaterialExpressionVectorParameter.General=True
+MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
+MaterialExpressionVectorParameter.MaterialExpression=True
+MaterialExpressionVectorParameter.CustomPrimitiveData=True
+MaterialExpressionVectorParameter.ParameterCustomization=True
+K2Node_FunctionEntry.GraphNodeDetail=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Accessibility=True
+TextBlock.Performance=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=True
+TextBlock.Render Transform=True
+TextBlock.Clipping=True
+TextBlock.Navigation=True
+TextBlock.Localization=True
+CanvasPanel.Behavior=True
+CanvasPanel.Accessibility=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Performance=True
+CanvasPanel.Clipping=True
+CanvasPanel.Navigation=True
+CanvasPanel.Localization=True
+BP_MainWidget_C.Appearance=True
+BP_MainWidget_C.Designer=True
+BP_MainWidget_C.Input=True
+BP_MainWidget_C.Interaction=True
+BP_MainWidget_C.Performance=True
+BP_MainWidget_C.Layout=True
+BP_MainWidget_C.Behavior=True
+BP_MainWidget_C.Render Transform=True
+BP_MainWidget_C.Accessibility=True
+BP_MainWidget_C.Clipping=True
+BP_MainWidget_C.Navigation=True
+BP_MainWidget_C.Localization=True
+K2Node_FunctionResult.Graph=True
+K2Node_FunctionResult.Inputs=True
+K2Node_FunctionResult.Outputs=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Resources/M_Background
-MRUItem1=/Engine/BasicShapes/Cube
-MRUItem2=/Game/Blueprints/BP_KillZone
-MRUItem3=/Game/Blueprints/BP_Player
-MRUItem4=/Game/Blueprints/BP_Enemy
-MRUItem5=/Game/Blueprints/NewBlueprint
-MRUItem6=/Game/Blueprints/BP_Bullet
-MRUItem7=/Game/Blueprints/BP_EnemyFactory
-MRUItem8=/Game/Audio/star-wars-blaster
-MRUItem9=/Game/Blueprints/BP_Enomy
-MRUItem10=/Game/Blueprints/BP_GameModeBase
-MRUItem11=/Game/Maps/MainMap
+MRUItem0=/Game/UI/BP_MainWidget
+MRUItem1=/Game/Blueprints/BP_Bullet
+MRUItem2=/Game/Blueprints/BP_GameModeBase
+MRUItem3=/Game/Blueprints/BP_Enemy
+MRUItem4=/Game/Modelings/EnemyModel/Material__24
+MRUItem5=/Engine/BasicShapes/BasicShapeMaterial
+MRUItem6=/Game/Blueprints/BP_Player
+MRUItem7=/Game/Modelings/SpaceShip/UV
+MRUItem8=/Game/Resources/M_Background
+MRUItem9=/Engine/BasicShapes/Cube
+MRUItem10=/Game/Blueprints/BP_KillZone
+MRUItem11=/Game/Blueprints/NewBlueprint
+MRUItem12=/Game/Blueprints/BP_EnemyFactory
+MRUItem13=/Game/Audio/star-wars-blaster
+MRUItem14=/Game/Blueprints/BP_Enomy
+MRUItem15=/Game/Maps/MainMap
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -1689,6 +1763,8 @@ MovieSceneCapture.TimeStamp=2023.08.17-00.20.09
 MovieSceneCapture.LastCompileMethod=Unknown
 StaticMeshEditor.TimeStamp=2023.08.17-00.20.13
 StaticMeshEditor.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2023.08.17-00.20.12
+SequencerWidgets.LastCompileMethod=Unknown
 
 [DetailCustomWidgetExpansion]
 CryptoKeysSettings=InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Horizontal,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Horizontal,InputSettings.Bindings.AxisMappings.Vertical,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
@@ -1777,13 +1853,17 @@ BP_EnemyFactory_C=BoxComponent.Collision.Collision,
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[0]\" \"Object.Bindings.AxisMappings.AxisMappings[3]\" "
 Object=
-BoxComponent=
-ShapeComponent=
+BoxComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 PrimitiveComponent=
 SceneComponent=
 ActorComponent=
-StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+StaticMeshComponent=
+MeshComponent=
+TextBlock="\"Object.Appearance.Font\" "
+TextLayoutWidget="\"Object.Appearance.Font\" "
+Widget=
+Visual=
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1828,10 +1908,9 @@ CoordSystem=1
 /Game/Audio/star-wars-blaster.star-wars-blaster=0
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=FBXImport
 
 [/Script/UnrealEd.MaterialEditorOptions]
-bShowGrid=False
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 
@@ -1900,4 +1979,186 @@ bMaterialQualityUsed[3]=0
 OnlyBuildSelected=False
 OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
+
+[FBX_Import_UI_Option_FbxImportUI]
+bOverrideFullName=True
+bCreatePhysicsAsset=True
+bAutoComputeLodDistances=True
+LodDistance0=0.000000
+LodDistance1=0.000000
+LodDistance2=0.000000
+LodDistance3=0.000000
+LodDistance4=0.000000
+LodDistance5=0.000000
+LodDistance6=0.000000
+LodDistance7=0.000000
+MinimumLodNumber=0
+LodNumber=0
+bImportAnimations=False
+bImportMaterials=True
+bImportTextures=True
+
+[FBX_Import_UI_Option_FbxStaticMeshImportData]
+StaticMeshLODGroup=None
+VertexColorImportOption=Ignore
+VertexOverrideColor=(B=255,G=255,R=255,A=255)
+bRemoveDegenerates=True
+bBuildAdjacencyBuffer=True
+bBuildReversedIndexBuffer=True
+bGenerateLightmapUVs=True
+bOneConvexHullPerUCX=True
+bAutoGenerateCollision=True
+bCombineMeshes=False
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+bImportMeshLODs=False
+NormalImportMethod=FBXNIM_ImportNormals
+NormalGenerationMethod=MikkTSpace
+bComputeWeightedNormals=True
+bReorderMaterialToFbxOrder=True
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxSkeletalMeshImportData]
+VertexColorImportOption=Replace
+VertexOverrideColor=(B=0,G=0,R=0,A=0)
+bUpdateSkeletonReferencePose=False
+bUseT0AsRefPose=False
+bPreserveSmoothingGroups=True
+bImportMeshesInBoneHierarchy=True
+bImportMorphTargets=False
+ThresholdPosition=0.000020
+ThresholdTangentNormal=0.000020
+ThresholdUV=0.000977
+MorphThresholdPosition=0.015000
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+bImportMeshLODs=False
+NormalImportMethod=FBXNIM_ComputeNormals
+NormalGenerationMethod=MikkTSpace
+bComputeWeightedNormals=True
+bReorderMaterialToFbxOrder=True
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxAnimSequenceImportData]
+bImportMeshesInBoneHierarchy=True
+AnimationLength=FBXALIT_ExportedTime
+FrameImportRange=(Min=0,Max=0)
+bUseDefaultSampleRate=False
+CustomSampleRate=0
+bImportCustomAttribute=True
+bDeleteExistingCustomAttributeCurves=False
+bDeleteExistingNonCurveCustomAttributes=False
+bImportBoneTracks=True
+bSetMaterialDriveParameterOnCustomAttribute=False
+MaterialCurveSuffixes=_mat
+bRemoveRedundantKeys=True
+bDeleteExistingMorphTargetCurves=False
+bDoNotImportCurveWithZero=True
+bPreserveLocalTransform=False
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxTextureImportData]
+bInvertNormalMaps=False
+MaterialSearchLocation=Local
+BaseMaterialName=None
+BaseColorName=
+BaseDiffuseTextureName=
+BaseNormalTextureName=
+BaseEmissiveColorName=
+BaseEmmisiveTextureName=
+BaseSpecularTextureName=
+BaseOpacityTextureName=
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[WidgetTemplatesExpanded]
+Editor=False
+Input=False
+Lists=False
+Misc=False
+Optimization=False
+Panel=False
+Primitive=False
+Special Effects=False
+Synth=False
+User Created=False
+Advanced=False
+
+[UMGEditor.Designer]
+PreviewWidth=1280
+PreviewHeight=720
+PreviewAspectRatio=16:9
+bIsInPortraitMode=False
+ProfileName=
+ScaleFactor=1.000000
+bCanPreviewSwapAspectRatio=False
+
+[UMGSequencerSettings SequencerSettings]
+AutoChangeMode=None
+AllowEditsMode=AllEdits
+KeyGroupMode=KeyChanged
+KeyInterpolation=Auto
+bAutoSetTrackDefaults=False
+SpawnPosition=SSP_Origin
+bCreateSpawnableCameras=True
+bShowRangeSlider=False
+bIsSnapEnabled=True
+bSnapKeyTimesToInterval=True
+bSnapKeyTimesToKeys=True
+bSnapSectionTimesToInterval=True
+bSnapSectionTimesToSections=True
+bSnapKeysAndSectionsToPlayRange=False
+bSnapPlayTimeToKeys=False
+bSnapPlayTimeToInterval=True
+bSnapPlayTimeToPressedKey=True
+bSnapPlayTimeToDraggedKey=True
+bSnapCurveValueToInterval=True
+bShowSelectedNodesOnly=False
+bRewindOnRecord=True
+ZoomPosition=SZP_CurrentTime
+bAutoScrollEnabled=False
+bLinkCurveEditorTimeRange=False
+bSynchronizeCurveEditorSelection=True
+bIsolateCurveEditorToSelection=True
+LoopMode=SLM_NoLoop
+bKeepCursorInPlayRangeWhileScrubbing=False
+bKeepPlayRangeInSectionBounds=True
+ZeroPadFrames=0
+JumpFrameIncrement=(Value=5)
+bShowCombinedKeyframes=True
+bInfiniteKeyAreas=False
+bShowChannelColors=False
+ReduceKeysTolerance=0.000100
+bDeleteKeysWhenTrimming=True
+bDisableSectionsAfterBaking=True
+bCleanPlaybackMode=True
+bActivateRealtimeViewports=True
+bEvaluateSubSequencesInIsolation=False
+bRerunConstructionScripts=True
+bShowDebugVisualization=False
+bVisualizePreAndPostRoll=True
+bCompileDirectorOnEvaluate=False
+TrajectoryPathCap=250
+bShowOutlinerInfoColumn=True
+FrameNumberDisplayFormat=Seconds
+MovieRendererName=
 
