--- a/ShootingProject/Config/DefaultGame.ini
+++ b/ShootingProject/Config/DefaultGame.ini
@@ -6,3 +6,7 @@ ProjectID=49ECCB7242D52EA2EDD2FCA6ECC8BF49
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+StagingDirectory=(Path="../../../../../../GitHub/BP-Shooting")
+
