--- a/ShootingProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ShootingProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -66,7 +66,7 @@ EnablePIEEnterAndExitSounds=False
 PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
-NewWindowPosition=(X=1280,Y=684)
+NewWindowPosition=(X=0,Y=0)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -95,15 +95,15 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1445,Y=1281)
+LastSize=(X=1910,Y=998)
 LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-MDBI1CK
 LastExecutedLaunchName=DESKTOP-MDBI1CK
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-NewWindowWidth=1445
-NewWindowHeight=1281
-MultipleInstancePositions=(X=1280,Y=684)
+NewWindowWidth=1910
+NewWindowHeight=998
+MultipleInstancePositions=(X=0,Y=0)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -133,15 +133,12 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 LastLevel=/Game/Maps/MainMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/UI/BP_GameOverWidget.BP_GameOverWidget
 OpenAssetsAtExit=/Game/Blueprints/BP_Enemy.BP_Enemy
-OpenAssetsAtExit=/Game/Blueprints/BP_GameModeBase.BP_GameModeBase
-OpenAssetsAtExit=/Game/Blueprints/BP_Bullet.BP_Bullet
 OpenAssetsAtExit=/Game/UI/BP_MainWidget.BP_MainWidget
-OpenAssetsAtExit=/Game/Blueprints/BP_Player.BP_Player
-OpenAssetsAtExit=/Game/Blueprints/BP_EnemyFactory.BP_EnemyFactory
-OpenAssetsAtExit=/Game/Blueprints/BP_KillZone.BP_KillZone
-OpenAssetsAtExit=/Game/Resources/M_Background.M_Background
+OpenAssetsAtExit=/Game/Blueprints/BP_Bullet.BP_Bullet
+OpenAssetsAtExit=/Game/Blueprints/BP_GameModeBase.BP_GameModeBase
 
 [RootWindow]
 ScreenPosition=X=0.000 Y=160.000
@@ -948,24 +945,51 @@ AutomationTestSettings.MiscAutomationSetups=True
 AutomationTestSettings.ExternalTools=True
 AutomationTestSettings.Screenshots=True
 CrashReporterSettings.CrashReporter=True
+BP_GameOverWidget_C.Appearance=True
+BP_GameOverWidget_C.Input=True
+BP_GameOverWidget_C.Accessibility=True
+BP_GameOverWidget_C.Interaction=True
+BP_GameOverWidget_C.Behavior=True
+BP_GameOverWidget_C.Render Transform=True
+BP_GameOverWidget_C.Performance=True
+BP_GameOverWidget_C.Clipping=True
+BP_GameOverWidget_C.Navigation=True
+BP_GameOverWidget_C.Localization=True
+Button.Layout=True
+Button.Appearance=True
+Button.Interaction=True
+Button.Accessibility=True
+Button.Behavior=True
+Button.Render Transform=True
+Button.Performance=True
+Button.Clipping=True
+Button.Navigation=True
+Button.Localization=True
+Button.Events=True
+PropertyWrapper.Events=True
+K2Node_CallFunction.Graph=True
+K2Node_CallFunction.Inputs=True
+K2Node_CallFunction.Outputs=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Resources/M_Background
-MRUItem1=/Game/Blueprints/BP_KillZone
-MRUItem2=/Game/Blueprints/NewBlueprint
-MRUItem3=/Game/Blueprints/BP_EnemyFactory
-MRUItem4=/Game/Blueprints/BP_Player
-MRUItem5=/Game/UI/BP_MainWidget
-MRUItem6=/Game/Blueprints/BP_Bullet
-MRUItem7=/Game/Blueprints/BP_GameModeBase
-MRUItem8=/Game/Blueprints/BP_Enemy
-MRUItem9=/Game/Modelings/EnemyModel/Material__24
-MRUItem10=/Engine/BasicShapes/BasicShapeMaterial
-MRUItem11=/Game/Modelings/SpaceShip/UV
-MRUItem12=/Engine/BasicShapes/Cube
-MRUItem13=/Game/Audio/star-wars-blaster
-MRUItem14=/Game/Blueprints/BP_Enomy
-MRUItem15=/Game/Maps/MainMap
+MRUItem0=/Game/Blueprints/BP_SaveGame
+MRUItem1=/Game/Blueprints/BP_GameModeBase
+MRUItem2=/Game/Blueprints/BP_Bullet
+MRUItem3=/Game/UI/BP_MainWidget
+MRUItem4=/Game/Blueprints/BP_Enemy
+MRUItem5=/Game/UI/BP_GameOverWidget
+MRUItem6=/Game/Resources/M_Background
+MRUItem7=/Game/Blueprints/BP_KillZone
+MRUItem8=/Game/Blueprints/NewBlueprint
+MRUItem9=/Game/Blueprints/BP_EnemyFactory
+MRUItem10=/Game/Blueprints/BP_Player
+MRUItem11=/Game/Modelings/EnemyModel/Material__24
+MRUItem12=/Engine/BasicShapes/BasicShapeMaterial
+MRUItem13=/Game/Modelings/SpaceShip/UV
+MRUItem14=/Engine/BasicShapes/Cube
+MRUItem15=/Game/Audio/star-wars-blaster
+MRUItem16=/Game/Blueprints/BP_Enomy
+MRUItem17=/Game/Maps/MainMap
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -2047,6 +2071,9 @@ BP_KillZone_C=BoxComponent.Collision.Collision,
 SceneComponent=
 BP_EnemyFactory_C=
 K2Node_VariableSet=BoxComponent.Collision.Collision,
+PlayerController=
+BP_SaveGame_C=
+BP_GameModeBase_C=
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[0]\" \"Object.Bindings.AxisMappings.AxisMappings[3]\" "
@@ -2126,7 +2153,7 @@ CoordSystem=1
 /Game/Audio/star-wars-blaster.star-wars-blaster=0
 
 [MessageLog]
-LastLogListing=LoadErrors
+LastLogListing=BlueprintLog
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
